# pyclustafari

./: .autoenv  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yaml  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
clustafari/: __init__.py  exceptions.py  manager.py  paths.py  utils.py  workerstub.py
clustafari/config/: __init__.py
clustafari/runner/: __init__.py  info.py  runnable.py
clustafari/runner/dummy/: config.py  runner.py
clustafari/runner/slurm/: __init__.py  config.py  info.py  runner.py
clustafari/runner/subprocess/: __init__.py  config.py  runner.py
config/: slurm_defaults.yaml
docs/: api.md  installation.md  usage.md
notebooks/: demo.ipynb
scripts/: clustafari.job  slurmlib.job
slurmlib/: __init__.py  annotations.py  config.py  exceptions.py  manager.py  paths.py  runnable.py  runner.py  utils.py  workerstub.py
slurmlib/config/: __init__.py  config.py  dummy.py  slurm.py  subprocess.py
slurmlib/resources/: __init__.py  resources.py
slurmlib/runner/: __init__.py  runnable.py  slurm.py  state.py  subprocess.py
slurmlib/runner/dummy/: __init__.py  config.py  runner.py
slurmlib/runner/slurm/: __init__.py  config.py  info.py  runner.py
slurmlib/runner/subprocess/: config.py  runner.py
src/clustafari/: __init__.py  annotations.py  exceptions.py  manager.py  paths.py  utils.py  workerstub.py
src/clustafari/config/: __init__.py  slurm_defaults.yaml
src/clustafari/resources/: __init__.py  resources.py
src/clustafari/runner/: __init__.py  info.py  runnable.py
src/clustafari/runner/dummy/: __init__.py  config.py  runner.py
src/clustafari/runner/slurm/: __init__.py  config.py  info.py  runner.py
src/clustafari/runner/subprocess/: __init__.py  config.py  runner.py
tests/: __init__.py  test_clustafari.py  test_resources.py  test_slurmlib.py
