[build-system]
requires = [
    "setuptools >= 40.9.0",
    "cython",
    "wheel",
]
build-backend = "setuptools.build_meta"

[pyclustafari]
name = "clustafari"
version = "0.1.0"
dependencies = [
    "pyprojroot",
    "pyyaml"
]
requires-python = ">=3.11"
data_file = ["config/slurm_defaults.yaml"]
authors = [
    { name = "Christian Huber", email = "hiddenaddress@gmail.com" },
]
maintainers = [
    { name = "Christian Huber", email = "hiddenaddress@gmail.com" }
]
description = "Runs Python function on a cluster."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["execution", "cluster"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]

[pyclustafari.urls]
Homepage = "https://github.com/chuber1986/pyclustafari"
Documentation = "https://github.com/chuber1986/pyclustafari"
Repository = "https://github.com/chuber1986/pyclustafari"
"Bug Tracker" = "https://github.com/chuber1986/pyclustafari/issues"
Changelog = "https://github.com/chuber1986/pyclustafari/blob/main/CHANGELOG.md"

[pyclustafari.optional-dependencies]
test = [
    "bump2version>=1.0.1",
    "pre-commit>=2.12.0",
    "tox>=3.20.1",
    "tox-conda>=0.2.0",
    "pytest-runner>=6.0.0",
    "pytest>=7.2.0",
    "pytest_cov>=4.0.0",
    "flake8>=5.0.4",
    "black>=22.10.0",
    "mypy>=0.982",
    "mkdocs>=1.4.2",
    "mkdocs-include-markdown-plugin>=3.9.1",
    "mkdocs-material>=8.5.8",
    "mkdocstrings[python]>=0.19.0",
    "mkdocs-autorefs>=0.4.1",
]
demo = [
    "numpy",
    "matplotlib",
    "scikit-learn",
    "jupyter"
]
