[project]
name = "clustafari"
version = "0.1.0"
description = "Runs Python function on a cluster."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Christian Huber", email = "hiddenaddress@gmail.com" },
]
maintainers = [
    { name = "Christian Huber", email = "hiddenaddress@gmail.com" }
]
keywords = ["execution", "cluster", "slurm", "interactive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
requires-python = ">=3.12"
dependencies = [
    "pyprojroot",
    "pyyaml",
    "joblib",
    "pyslurm",
]

[dependency-groups]
dev = [
    "pre-commit>=2.12.0",
    "pytest-runner>=6.0.0",
    "pytest>=7.2.0",
    "pytest_cov>=4.0.0",
    "flake8>=5.0.4",
    "black>=22.10.0",
    "mypy>=0.982",
    "mkdocs>=1.4.2",
    "mkdocs-include-markdown-plugin>=3.9.1",
    "mkdocs-material>=8.5.8",
    "mkdocstrings[python]>=0.19.0",
    "mkdocs-autorefs>=0.4.1",
    "ipykernel>=7.1.0",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "jupyter",
]

[project.urls]
Homepage = "https://github.com/chuber1986/pyclustafari"
Documentation = "https://github.com/chuber1986/pyclustafari"
Repository = "https://github.com/chuber1986/pyclustafari"
"Bug Tracker" = "https://github.com/chuber1986/pyclustafari/issues"
Changelog = "https://github.com/chuber1986/pyclustafari/blob/main/CHANGELOG.md"

[tool.uv.sources]
pyslurm = { path = "../pyslurm" }

[project.scripts]
clustafari = "clustafari:main"


[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
data = { scripts = "scripts" }



[tool.tox]
requires = "tox-conda"


[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN202", "ANN401", "COM812", "D203", "D212", "D213", "D105", "EXE002", "S311", "S101", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
"src/odetect/utils/*" = ["G004"]

[tool.ruff]
exclude = [
  "tests"
]
line-length = 120

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*", "**/tests/**/*"]

[tool.pyrefly.errors]
bad-override = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
